<resources>

    <string name="app_name">Estadisticas del chatbot</string>


    <string-array name="months">
        <item>Mes</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="weeks">
        <item>Semana</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="years">
        <item>Año</item>
        <item>2025</item>
    </string-array>


    <!--Login-->
    <string name="login">Iniciar sesión</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>

    <!--activity-stats-->
    <string name="stadistics">Estadísticas</string>
    <string name="chatbot_consults">Consultas del chatbot</string>
    <string name="filter">Filtrar por</string>
    <string name="theme">Consultas por tema</string>
    <string name="subtheme">Consultas por subtema</string>
    <string name="logout">Cerrar sesión</string>
    <string name="change_prompt">El prompt actual define la forma en la que el chatbot responde, ¿Estás seguro de comenzar a cambiar el prompt del chatbot?</string>"


    <!--activity-prompt-->
    <string name="current_prompt">Prompt actual</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel_prompt">¿Seguro que desea descartar el cambio de prompt? Los cambios se perderán.</string>
    <string name="confirm_prompt">¿Seguro que desea realizar el cambio de prompt?</string>


    <!--Categoriass-->
    <string name="category_context">Fuera de contexto</string>
    <string name="category_campus">Información del campus</string>
    <string name="category_admission">Proceso de admisión</string>
    <string name="category_inscription">Proceso de inscripción</string>
    <string name="category_other">Otros procesos</string>
    <string name="category_answers">Sin respuesta</string>

    <!--Subtemas-->
    <string name="subcategory_buildings">Edificios</string>
    <string name="subcategory_services">Servicios (Servicios escolares, cafeterías, TOEFL, Asesorías)</string>
    <string name="subcategory_careers">Carreras</string>
    <string name="subcategory_general_info">Información general</string>
    <string name="subcategory_costs">Costos</string>
    <string name="subcategory_important_dates">Fechas importantes (Inicio de clases)</string>
    <string name="subcategory_contact_followup">Seguimiento y contacto (Correos y contactos por área)</string>
    <string name="subcategory_documents_delivery">Entrega de documentos</string>
    <string name="subcategory_reenrollment">Reinscripción en línea</string>
    <string name="subcategory_study_guide">Guía de estudio</string>
    <string name="subcategory_graduation">Titulación (Contacto)</string>
    <string name="subcategory_scholarships">Becas (Contacto)</string>
    <string name="subcategory_school_control">Control escolar (Contacto)</string>
    <string name="subcategory_academic_load">Carga académica (Contacto)</string>
    <string name="subcategory_english">Ingles (Contacto)</string>
</resources>